<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">IMC</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_home">MainHomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="name">الاسم</string>
    <string name="reservtion">احجز الان</string>
    <string name="phone">موبايل</string>
    <string name="cancel">رجوع</string>

    <string name="send">ارسال</string>
    <string name="search">Search</string>
    <string name="expert_details_name_demo">د وجيه موسي</string>
    <string name="expert_detail_nationality_demo">انجليزي</string>
    <string name="nationality">الجنسية :</string>
    <string name="date_expert">من 15/12/2018 الي 20/12/2018</string>
    <string name="date_expert_demo">الفترة :</string>
    <string name="generalSpec">جراحة عظام</string>
    <string name="genralSpecDemo">التخصص العام :</string>
    <string name="specialSpecDemo">جراحات تشوهات واصابات وامراض القدم ومفصل الكاحل</string>
    <string name="specialSpecd">التخصص الدقيق :</string>
    <string name="reserveDemoButton">احجز الان</string>
</resources>
